# DSL

./: AnteckningarKap1.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex7.hs  LICENSE  README.md  Uppgifter.txt  stack.yaml
DSLsofMath-0.1.9.1/.stack-work/install/x86_64-linux/lts-8.17/8.0.2/flag-cache/: QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  random-1.1-9tceXaeYIMZ4JrKq20Egog  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7
Kap1/: AnteckningarKap1.hs  AnteckningarKap1.hs~  Ex1.hs  Ex10.hs  Ex10.hs~  Ex11.hs  Ex12.hs  Ex12.hs~  Ex13.hs  Ex13.hs~  Ex14.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex8.hs  Ex8.hs~  Ex9.hs  Kap1.cabal  Kap1.cabal~  stack.yaml  stack.yaml~
Kap2/: Assignment1.hs  Assignment1.hs~  Ex1.hs  Ex1.hs~  Ex2.hs  Ex2.hs~  Ex3.hs  Ex3.hs~  Ex4.hs  Ex4.hs~  Ex5.hs  Ex7.hs  Ex7.hs~  Ex9.hs  Ex9.hs~  demo.hs~
Kap3/: Ex1.hs
Kap4/: Ex9.hs  anteckning.hs  anteckning.hs~
Kap5/: Ex1.hs  Ex1.hs~
